--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
             max-width: 800px;
         }
         .szines{
-            background-color: lightgreen;
-            /* width: calc((100% - 40px) / 3); */
+            background-color: lightgreen;   
             margin-bottom: 30px;
+            max-width: 250px;
         }
         .doboz{
             border: 1px solid black;
             min-height: 200px;
-            padding-bottom: 20px;
         }
         button{
             text-align: center;
@@ -32,38 +31,38 @@
             max-height: 200px;
         }
         #email, #feliratkozom{
-            width: 100%;
+            width: 90%;
             margin: 2px auto;
         }
         #bezar{
-            margin: 0px 5% 0px 100%;
-        }
-        .kozep{
-            display: block;
-            margin: 0 auto;
+            margin: 0px 5% 0px 95%;
         }
     </style>
 </head>
 <body>
-    <div class="kozep">
-
-        <div class="container-fluid">
-            <h1>Ingyenes tanfolyamok</h1>
-        <div class="row gx-5 justify-content-evenly">
-            <div class="col-12 col-md-4 shadow-lg text-center szines">
-                    <img src="logo-css3.png" class="img-fluid "alt="">
+    <div class="container-fluid">
+        <h1>Ingyenes tanfolyamok</h1>
+        <div class="row justify-content-evenly">
+            <div class="col-12 col-md-4 shadow -lg text-center szines">
+                <div class="">
+                    <img src="logo-css3.png" class="w-50 "alt="">
                     <p>CSS3</p>
 
+                </div>
             </div>
             <div class="col-12 col-md-4 shadow -lg text-center szines  ">
-                    <img src="logo-html5.png"class="img-fluid " alt="">
+                <div class="">
+                    <img src="logo-html5.png"class="w-50 " alt="">
                     <p>HTML5</p>
 
+                </div>
             </div>
             <div class="col-12 col-md-4 shadow -lg text-center szines  ">
-                    <img src="bootstrap.png" class="img-fluid "alt="">
+                <div class="">
+                    <img src="bootstrap.png" class="w-50 "alt="">
                     <p>BOOTSTRAP</p>
 
+                </div>
             </div>
         </div>
         <div class="row">
@@ -81,6 +80,5 @@
         </div>
         <h2>Következő fejezet</h2>
     </div>
-</div>
 </body>
 </html>
