--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Document</title>
     <style>
         body{
-            max-width: 800px;
+            
         }
         .szines{
             background-color: lightgreen;   
             margin-bottom: 30px;
             max-width: 250px;
+            box-shadow: 5px 5px ;
         }
         .doboz{
             border: 1px solid black;
@@ -31,35 +33,42 @@
             max-height: 200px;
         }
         #email, #feliratkozom{
-            width: 90%;
+            width: 100%;
             margin: 2px auto;
         }
         #bezar{
             margin: 0px 5% 0px 95%;
         }
+        .container{
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .row{
+            height: 250px;
+        }
     </style>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <h1>Ingyenes tanfolyamok</h1>
         <div class="row justify-content-evenly">
-            <div class="col-12 col-md-4 shadow -lg text-center szines">
+            <div class="col-12 col-md-4  text-center szines">
                 <div class="">
-                    <img src="logo-css3.png" class="w-50 "alt="">
+                    <img src="logo-css3.png" class="fluid "alt="">
                     <p>CSS3</p>
 
                 </div>
             </div>
-            <div class="col-12 col-md-4 shadow -lg text-center szines  ">
+            <div class="col-12 col-md-4  text-center szines  ">
                 <div class="">
-                    <img src="logo-html5.png"class="w-50 " alt="">
+                    <img src="logo-html5.png"class="fluid " alt="">
                     <p>HTML5</p>
 
                 </div>
             </div>
-            <div class="col-12 col-md-4 shadow -lg text-center szines  ">
+            <div class="col-12 col-md-4  text-center szines  ">
                 <div class="">
-                    <img src="bootstrap.png" class="w-50 "alt="">
+                    <img src="bootstrap.png" class="fluid "alt="">
                     <p>BOOTSTRAP</p>
 
                 </div>
