--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
         <div class="row justify-content-evenly">
             <div class="col-12 col-md-4  text-center szines">
                 <div class="">
-                    <img src="logo-css3.png" class="fluid "alt="">
+                    <img src="logo-css3.png" class="img-fluid "alt="">
                     <p>CSS3</p>
 
                 </div>
             </div>
             <div class="col-12 col-md-4  text-center szines  ">
                 <div class="">
-                    <img src="logo-html5.png"class="fluid " alt="">
+                    <img src="logo-html5.png"class="img-fluid " alt="">
                     <p>HTML5</p>
 
                 </div>
             </div>
             <div class="col-12 col-md-4  text-center szines  ">
                 <div class="">
-                    <img src="bootstrap.png" class="fluid "alt="">
+                    <img src="bootstrap.png" class="img-fluid "alt="">
                     <p>BOOTSTRAP</p>
 
                 </div>
