--- a/index.html
+++ b/index.html
@@ -7,87 +7,80 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Document</title>
     <style>
-        body{
-            
+        .container{
+            max-width: 800px;
+            /* border: 1px solid black; */
+            margin: 0 auto;
         }
-        .szines{
-            background-color: lightgreen;   
-            margin-bottom: 30px;
-            max-width: 250px;
-            box-shadow: 5px 5px ;
+        .cucc{
+            background-color: lightgreen;
+            box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
         }
-        .doboz{
-            border: 1px solid black;
-            min-height: 200px;
+        #leiras{
+            padding-top: 25px;
+            padding-bottom: 25px;
+        }
+        #bezar{
+            margin: 0px 5% 0px 95%;
+        }
+        #email, #feliratkozom{
+            width: 100%;
+            margin: 2px auto;
+            border-radius: 5px;
+            border: 1px solid lightgreen;
         }
         button{
             text-align: center;
             margin: 5px 0px;
             background-color: lightgreen;
             text-align: center;
+            border: none;
         }   
-        h2{
-            margin: 10px 0 0 0;
+        .hirlevel{
+            border: 1px solid black;
+            padding: 10px;
+            border-radius: 5px;
         }
-        img{
-            max-height: 200px;
-        }
-        #email, #feliratkozom{
-            width: 100%;
-            margin: 2px auto;
-        }
-        #bezar{
-            margin: 0px 5% 0px 95%;
-        }
-        .container{
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .row{
-            height: 250px;
-        }
-    </style>
+        
+</style>
 </head>
 <body>
     <div class="container">
-        <h1>Ingyenes tanfolyamok</h1>
-        <div class="row justify-content-evenly">
-            <div class="col-12 col-md-4  text-center szines">
-                <div class="">
-                    <img src="logo-css3.png" class="img-fluid "alt="">
-                    <p>CSS3</p>
-
-                </div>
-            </div>
-            <div class="col-12 col-md-4  text-center szines  ">
-                <div class="">
-                    <img src="logo-html5.png"class="img-fluid " alt="">
-                    <p>HTML5</p>
-
-                </div>
-            </div>
-            <div class="col-12 col-md-4  text-center szines  ">
-                <div class="">
-                    <img src="bootstrap.png" class="img-fluid "alt="">
-                    <p>BOOTSTRAP</p>
-
-                </div>
-            </div>
-        </div>
         <div class="row">
-            <div class="col-12 doboz">
-                <p id="bezar">x</p>
-                <h2>Hírlevél</h2>
-                <p>Iratkozz fel a hírlevelünkre, hogy időben értesülj a webes technológia újdonságairól</p>
-                <input type="text" id="email"> <br>
-                <button id="feliratkozom">feliratkozom</button> <br>
-                <input type="checkbox" name="asd" id="asd"> 
-                <label   style="display: inline-block; text-align: right;">
-                    Elfogadom a feltételeket.
-                </label>
+            <div class="col-12 col-md-4 text-center szines">
+                <div class="cucc m-1">
+                    <img src="logo-css3.png" class="w-75" alt="">
+                    <p id="leiras">CSS3</p>
+
+                </div>
+            </div>
+            <div class="col-12 col-md-4 text-center szines">
+                <div class="cucc m-1">
+                    <img src="logo-html5.png" class="w-75" alt="">
+                    <p id="leiras">HTML5</p>
+
+                </div>
+            </div>
+            <div class="col-12 col-md-4 text-center szines">
+                <div class="cucc m-1">
+                    <img src="bootstrap.png" class="w-75" alt="">
+                    <p id="leiras">BOOTSTRAP</p>
+
+                </div>
             </div>
         </div>
-        <h2>Következő fejezet</h2>
+        <div class="hirlevel">
+            <p id="bezar">x</p>
+            <h2>Hírlevél</h2>
+            <p>Iratkozz fel a hírlevelünkre, hogy időben értesülj a webes technológia újdonságairól</p>
+            <input type="text" id="email"> <br>
+            <button id="feliratkozom">feliratkozom</button> <br>
+            <input type="checkbox" name="asd" id="asd"> 
+            <label   style="display: inline-block; text-align: right;">
+                Elfogadom a feltételeket.
+
+        </div>
+        <h2 style="margin-top: 25px;">Következő fejezet</h2>
     </div>
 </body>
 </html>
